# pyls

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  file_system.py  node.py
tests/: test_cli.py  test_filesystem.py  test_node.py
